Fixed create action redirect. Cleaned up home index and post index

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -13,7 +13,7 @@
                     <h2 class="content-subtitle">Who am I?</h2>
                     <h6 class="content-title">I'm Dominic, a Full Stack Web Developer </h6>
                     <div class="content-description">
-                        <p>I take problems and turn them into solutions with flexible web development skills. I am passionate about technology and always striving for excellence.</p>
+                        <p>I am passionate about technology, always interested in learning more and building onto my current skillset. I write weekly blog posts about web development.</p>
                     </div>
 
                     <hr />
