Updated site name

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,8 +12,9 @@
 @inject UserManager<BlogUser> _userManager
 
 @{ 
-    ViewData["Title"] = "Dominic's IT Blog";
-    ViewData["Subtitle"] = "Writing about .NET, C#, and other web development topics.";
+    ViewData["Title"] = "Code Times Coffee";
+    ViewData["subcaption"] = "Tech Blog";
+    ViewData["Subtitle"] = "Writing about C#, .NET, and other web development topics.";
 }
 
 <div class="container-fluid pt-5">
