--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,37 +5,43 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<div class="container">
-    <h4>@ViewData["Title"]</h4>
-    <partial name="_StatusMessage" model="Model.StatusMessage" />
-    <div class="row gx-4 gx-lg-5 mx-5 justify-content-center">
-        <div class="col-md-6 col-lg-6 col-xl-6">    
-            <form id="profile-form" method="post" enctype="multipart/form-data">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Username"></label>
-                    <input asp-for="Username" class="form-control" disabled />
+<partial name="_StatusMessage" model="Model.StatusMessage" />
+<div class="row gx-4 gx-lg-5 mx-5 ">
+    <div class="col-md-8 col-lg-8 col-xl-8">
+        <h4 class="mb-3">@ViewData["Title"]</h4>
+        <form id="profile-form" method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group mb-2">
+                <label asp-for="Username"></label>
+                <input asp-for="Username" class="form-control" disabled />
+            </div>
+            <div class="form-group mb-2">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                <label asp-for="Input.Image"></label>
+                <input type="file" asp-for="Input.Image" class="form-control" accept=".png,.jpg,.bmp,.tif,.gif" />
+                <span asp-validation-for="Input.Image" class="text-danger"></span>
+            </div>
+
+            @if(Model.CurrentImage is not null)
+            {
+                <div class="row d-flex">
+                    <div class=" form-group col-6">
+                        <label>Current Image:</label>
+                    </div>
+                    <div class="col-6 align-content-end justify-content-end">
+                        <img src="@Model.CurrentImage" class="img-fluid border border-2 rounded rounded-2" rounded-circle width="100" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Input.PhoneNumber"></label>
-                    <input asp-for="Input.PhoneNumber" class="form-control" />
-                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group pb-3">
-                    <label asp-for="Input.Image"></label>
-                    <input type="file" asp-for="Input.Image" class="form-control" accept=".png,.jpg,.bmp,.tif,.gif" />
-                    <span asp-validation-for="Input.Image" class="text-danger"></span>
-                </div>
-                <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-            </form>
-        </div>
-        <div class="col-md-6">
-            <img src="@Model.CurrentImage" class="img-fluid" rounded-circle width="100" />
-        </div>
+            }
+            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+        </form>
     </div>
+
 </div>
-
-
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
