--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -5,20 +5,25 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h4>@ViewData["Title"]</h4>
 
-<div class="row">
-    <div class="col-md-6">
+<div class="row gx-4 gx-lg-5 justify-content-center">
+    <div class="col-md-12 col-lg-12 col-xl-12">
+        <h4 class="mb-3">@ViewData["Title"]</h4>
         <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Delete</a>
-        </p>
+        <div class="row mb-5">
+            <div class="col-3">
+                <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
+                    <button class="btn btn-primary" type="submit">Download</button>
+                </form>
+            </div>
+
+            <div class="col-4">
+                    <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            </div>
+        </div>
     </div>
 </div>
 
