--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -11,29 +11,21 @@
             <div class="col-12 col-lg-7 about-content">
                 <div class="content-block">
                     <h2 class="content-subtitle">Who am I?</h2>
-                    <h6 class="content-title">I'm Dominic, a Full Stack Web Developer </h6>
+                    <h6 class="content-title">I'm Dominic, a .NET Developer </h6>
                     <div class="content-description">
-                        <p>I am passionate about technology, always interested in learning more and building onto my current skillset. I write weekly blog posts about web development.</p>
+                        <p>I am passionate about technology, always interested in learning more and building onto my current skillset.</p>
                     </div>
 
                     <hr />
 
                     <address class="content-info">
                         <div class="row">
-                            <div class="col-12 col-md-5 single-info">
+                            <div class="col-12 single-info">
                                 <span><strong>Name: </strong>Dominic Wegrzynowski</span>
                             </div>
-                            <div class="col-12 col-md-5 single-info">
+                            <div class="col-12 single-info">
 
-                                <span><strong>Email:</strong><a href="mailto:dominicwegrzynowski@gmail.com">dominicwegrzynowski@gmail.com</a></span>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 col-md-5 single-info">
-                                <span><strong>Age:  </strong>21</span>
-                            </div>
-                            <div class="col-12 col-md-5 single-info">
-                                <span><strong>From:  </strong>United States</span>
+                                <span><strong>Email:</strong><a href="mailto:dominicwegrzynowski@gmail.com"> dominicwegrzynowski@gmail.com</a></span>
                             </div>
                         </div>
                     </address>
